feat ( flavor ) : add 'get by id' endpoint
