# src/api/dto/base.go
@@ -4,3 +4,8 @@ type AuthUtils struct {
 	BaseUrl string
 	Token   string
 }
+
+type CommonDto struct {
+	Name string `json:"name"`
+	Id   string `json:"id"`
+}
