# src/api/dto/user_project.go
@@ -3,10 +3,5 @@ package dto
 type ListUserProjectRequest struct{}
 
 type ListUserProjectResponse struct {
-	UserProjects []UserProject `json:"projects"`
-}
-
-type UserProject struct {
-	Name string `json:"name"`
-	Id   string `json:"id"`
+	UserProjects []CommonDto `json:"projects"`
 }
