# src/api/handlers/flavors.go
@@ -33,17 +33,42 @@ func NewFlavorsHandler(cfg *config.Config) *FlavorsHandler {
 // @Router /v2/flavors [get]
 // @Security AuthBearer
 func (h *FlavorsHandler) ListFlavors(c *gin.Context) {
-	// req := new(dto.ListFlavorRequest)
-	// err := c.ShouldBindJSON(&req)
-	// if err != nil {
-	// 	c.AbortWithStatusJSON(http.StatusBadRequest,
-	// 		helper.GenerateBaseResponseWithValidationError(nil, false, helper.ValidationError, err))
-	// 	return
-	// }
 	var t, _ = c.Get(constants.TokenKey)
 	var u, _ = c.Get(constants.AuthUrlKey)
 	authUtils := &dto.AuthUtils{Token: t.(string), BaseUrl: u.(string)}
 	res, err := h.service.ListFlavors(new(dto.ListFlavorRequest), authUtils)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternalError, err))
+		return
+	}
+
+	c.JSON(http.StatusOK, helper.GenerateBaseResponse(res, true, helper.Success))
+}
+
+// GetFlavor godoc
+// @Summary Get Flavor
+// @Description Get Flavor
+// @Tags Flavors
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Id"
+// @Success 200 {object} helper.BaseHttpResponse{result=dto.GetFlavorResponse} "GetFlavor response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad request"
+// @Failure 401 {object} helper.BaseHttpResponse "Unauthorized request"
+// @Router /v2/flavors/{id} [get]
+// @Security AuthBearer
+func (h *FlavorsHandler) GetFlavor(c *gin.Context) {
+	id := c.Params.ByName("id")
+	if id == "" {
+		c.AbortWithStatusJSON(http.StatusNotFound,
+			helper.GenerateBaseResponse(nil, false, helper.ValidationError))
+		return
+	}
+	var t, _ = c.Get(constants.TokenKey)
+	var u, _ = c.Get(constants.AuthUrlKey)
+	authUtils := &dto.AuthUtils{Token: t.(string), BaseUrl: u.(string)}
+	res, err := h.service.GetFlavor(id, authUtils)
 	if err != nil {
 		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
 			helper.GenerateBaseResponseWithError(nil, false, helper.InternalError, err))
