# src/docs/swagger.yaml
@@ -16,12 +16,41 @@ definitions:
     - url
     - username
     type: object
-  github_com_itera-io_openstack-web-client_api_dto.Flavor:
+  github_com_itera-io_openstack-web-client_api_dto.CommonDto:
     properties:
       id:
         type: string
       name:
         type: string
+    type: object
+  github_com_itera-io_openstack-web-client_api_dto.FlavorDto:
+    properties:
+      disk:
+        description: Disk is the amount of root disk, measured in GB.
+        type: integer
+      id:
+        description: ID is the flavor's unique ID.
+        type: string
+      name:
+        description: Name is the name of the flavor.
+        type: string
+      os-flavor-access:is_public:
+        description: IsPublic indicates whether the flavor is public.
+        type: boolean
+      ram:
+        description: RAM is the amount of memory, measured in MB.
+        type: integer
+      vcpus:
+        description: VCPUs indicates how many (virtual) CPUs are available for this
+          flavor.
+        type: integer
+    type: object
+  github_com_itera-io_openstack-web-client_api_dto.GetFlavorResponse:
+    properties:
+      flavor:
+        items:
+          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.FlavorDto'
+        type: array
     type: object
   github_com_itera-io_openstack-web-client_api_dto.ListFlavorRequest:
     type: object
@@ -29,7 +58,7 @@ definitions:
     properties:
       flavors:
         items:
-          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.Flavor'
+          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.CommonDto'
         type: array
     type: object
   github_com_itera-io_openstack-web-client_api_dto.ListProjectRequest:
@@ -38,7 +67,7 @@ definitions:
     properties:
       projects:
         items:
-          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.Project'
+          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.CommonDto'
         type: array
     type: object
   github_com_itera-io_openstack-web-client_api_dto.ListRegionRequest:
@@ -47,38 +76,15 @@ definitions:
     properties:
       regions:
         items:
-          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.RegionItem'
+          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.CommonDto'
         type: array
-    type: object
-  github_com_itera-io_openstack-web-client_api_dto.ListUserProjectRequest:
     type: object
   github_com_itera-io_openstack-web-client_api_dto.ListUserProjectResponse:
     properties:
       projects:
         items:
-          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.UserProject'
+          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.CommonDto'
         type: array
-    type: object
-  github_com_itera-io_openstack-web-client_api_dto.Project:
-    properties:
-      id:
-        type: string
-      name:
-        type: string
-    type: object
-  github_com_itera-io_openstack-web-client_api_dto.RegionItem:
-    properties:
-      id:
-        type: string
-      name:
-        type: string
-    type: object
-  github_com_itera-io_openstack-web-client_api_dto.UserProject:
-    properties:
-      id:
-        type: string
-      name:
-        type: string
     type: object
   github_com_itera-io_openstack-web-client_api_dto.ValidateUserRequest:
     properties:
@@ -262,6 +268,42 @@ paths:
       summary: List Flavor
       tags:
       - Flavors
+  /v2/flavors/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get Flavor
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: GetFlavor response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.GetFlavorResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_helper.BaseHttpResponse'
+        "401":
+          description: Unauthorized request
+          schema:
+            $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get Flavor
+      tags:
+      - Flavors
   /v3/Projects:
     get:
       consumes:
@@ -336,18 +378,17 @@ paths:
       summary: List Region
       tags:
       - Regions
-  /v3/users/:id/projects:
+  /v3/users/{id}/projects:
     get:
       consumes:
       - application/json
       description: List UserProject
       parameters:
-      - description: ListUserProjectRequest
-        in: body
-        name: Request
+      - description: Id
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/github_com_itera-io_openstack-web-client_api_dto.ListUserProjectRequest'
+        type: string
       produces:
       - application/json
       responses:
